# lutzrenderer

./: CMakeLists.txt  README.md
gtest-download/: CMakeLists.txt.in
librend/: CMakeLists.txt  color.h  cursor.cpp  cursor.h  image_interface.h  image_png.cpp  image_png.h  image_tga.cpp  image_tga.h  model.cpp  model.h  rend.cpp  rend.h  vec3.h
librend/external_interfaces/: CMakeLists.txt  file_interface.h  libpng_interface.h  libtga_interface.h  mock_file_interface.h  mock_libpng_interface.h  mock_libtga_interface.h  regen_mock_interfaces.sh
libtga-download/: CMakeLists.txt.in
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  cursor.t.cpp  image_mock.h  image_png.t.cpp  image_tga.t.cpp  model.t.cpp  rend.t.cpp  vec3.t.cpp
tinyrenderer-download/: CMakeLists.txt.in
